Вынести паттерн форматирования даты за функции, поправить форматирование строк