@@ -28,10 +28,10 @@ public abstract class TaskManagerTest<T extends TaskManager> {
         Epic epic = new Epic("Epic", "Desc", Status.NEW);
         manager.createEpic(epic);
 
-        Subtask s1 = new Subtask("S1", "D", Status.NEW, epic.getId());
-        Subtask s2 = new Subtask("S2", "D", Status.NEW, epic.getId());
-        manager.createSubtask(s1);
-        manager.createSubtask(s2);
+        Subtask subtask1 = new Subtask("S1", "D", Status.NEW, epic.getId());
+        Subtask subtask2 = new Subtask("S2", "D", Status.NEW, epic.getId());
+        manager.createSubtask(subtask1);
+        manager.createSubtask(subtask2);
 
         assertEquals(Status.NEW, manager.getEpic(epic.getId()).getStatus());
     }
@@ -41,10 +41,10 @@ public abstract class TaskManagerTest<T extends TaskManager> {
         Epic epic = new Epic("Epic", "Desc", Status.NEW);
         manager.createEpic(epic);
 
-        Subtask s1 = new Subtask("S1", "D", Status.DONE, epic.getId());
-        Subtask s2 = new Subtask("S2", "D", Status.DONE, epic.getId());
-        manager.createSubtask(s1);
-        manager.createSubtask(s2);
+        Subtask subtask1 = new Subtask("S1", "D", Status.DONE, epic.getId());
+        Subtask subtask2 = new Subtask("S2", "D", Status.DONE, epic.getId());
+        manager.createSubtask(subtask1);
+        manager.createSubtask(subtask2);
 
         assertEquals(Status.DONE, manager.getEpic(epic.getId()).getStatus());
     }
@@ -54,10 +54,10 @@ public abstract class TaskManagerTest<T extends TaskManager> {
         Epic epic = new Epic("Epic", "Desc", Status.NEW);
         manager.createEpic(epic);
 
-        Subtask s1 = new Subtask("S1", "D", Status.NEW, epic.getId());
-        Subtask s2 = new Subtask("S2", "D", Status.DONE, epic.getId());
-        manager.createSubtask(s1);
-        manager.createSubtask(s2);
+        Subtask subtask1 = new Subtask("S1", "D", Status.NEW, epic.getId());
+        Subtask subtask2 = new Subtask("S2", "D", Status.DONE, epic.getId());
+        manager.createSubtask(subtask1);
+        manager.createSubtask(subtask2);
 
         assertEquals(Status.IN_PROGRESS, manager.getEpic(epic.getId()).getStatus());
     }
@@ -67,10 +67,10 @@ public abstract class TaskManagerTest<T extends TaskManager> {
         Epic epic = new Epic("Epic", "Desc", Status.NEW);
         manager.createEpic(epic);
 
-        Subtask s1 = new Subtask("S1", "D", Status.NEW, epic.getId());
-        Subtask s2 = new Subtask("S2", "D", Status.IN_PROGRESS, epic.getId());
-        manager.createSubtask(s1);
-        manager.createSubtask(s2);
+        Subtask subtask1 = new Subtask("S1", "D", Status.NEW, epic.getId());
+        Subtask subtask2 = new Subtask("S2", "D", Status.IN_PROGRESS, epic.getId());
+        manager.createSubtask(subtask1);
+        manager.createSubtask(subtask2);
 
         assertEquals(Status.IN_PROGRESS, manager.getEpic(epic.getId()).getStatus());
     }
@@ -80,29 +80,29 @@ public abstract class TaskManagerTest<T extends TaskManager> {
         Epic epic = new Epic("Epic", "Desc", Status.NEW);
         manager.createEpic(epic);
 
-        Subtask s1 = new Subtask("S1", "D", Status.NEW, epic.getId());
-        s1.setStartTime(LocalDateTime.of(2025, 11, 3, 9, 0));
-        s1.setDuration(Duration.ofMinutes(90));
+        Subtask subtask1 = new Subtask("S1", "D", Status.NEW, epic.getId());
+        subtask1.setStartTime(LocalDateTime.of(2025, 11, 3, 9, 0));
+        subtask1.setDuration(Duration.ofMinutes(90));
 
-        Subtask s2 = new Subtask("S2", "D", Status.NEW, epic.getId());
-        s2.setStartTime(LocalDateTime.of(2025, 11, 3, 10, 30));
-        s2.setDuration(Duration.ofMinutes(30));
+        Subtask subtask2 = new Subtask("S2", "D", Status.NEW, epic.getId());
+        subtask2.setStartTime(LocalDateTime.of(2025, 11, 3, 10, 30));
+        subtask2.setDuration(Duration.ofMinutes(30));
 
-        manager.createSubtask(s1);
-        manager.createSubtask(s2);
+        manager.createSubtask(subtask1);
+        manager.createSubtask(subtask2);
 
-        Epic e = manager.getEpic(epic.getId());
-        assertEquals(LocalDateTime.of(2025, 11, 3, 9, 0), e.getStartTime());
-        assertEquals(LocalDateTime.of(2025, 11, 3, 11, 0), e.getEndTime());
-        assertEquals(Duration.ofMinutes(120), e.getDuration());
+        Epic epic1 = manager.getEpic(epic.getId());
+        assertEquals(LocalDateTime.of(2025, 11, 3, 9, 0), epic.getStartTime());
+        assertEquals(LocalDateTime.of(2025, 11, 3, 11, 0), epic.getEndTime());
+        assertEquals(Duration.ofMinutes(120), epic1.getDuration());
     }
 
     @Test
     void shouldThrowExceptionWhenCreatingIntersectingTasks() {
-        Task t1 = new Task("T1", "D", Status.NEW);
-        t1.setStartTime(LocalDateTime.of(2025, 11, 3, 10, 0));
-        t1.setDuration(Duration.ofMinutes(60));
-        manager.createTask(t1);
+        Task task1 = new Task("T1", "D", Status.NEW);
+        task1.setStartTime(LocalDateTime.of(2025, 11, 3, 10, 0));
+        task1.setDuration(Duration.ofMinutes(60));
+        manager.createTask(task1);
 
         Task task2 = new Task("T2", "D", Status.NEW);
         task2.setStartTime(LocalDateTime.of(2025, 11, 3, 10, 30));
@@ -116,10 +116,10 @@ public abstract class TaskManagerTest<T extends TaskManager> {
         Epic epic = new Epic("Epic", "Desc", Status.NEW);
         manager.createEpic(epic);
 
-        Subtask sub = new Subtask("Sub", "D", Status.NEW, epic.getId());
-        sub.setStartTime(LocalDateTime.of(2025, 11, 3, 10, 0));
-        sub.setDuration(Duration.ofMinutes(60));
-        manager.createSubtask(sub);
+        Subtask subtask = new Subtask("Sub", "D", Status.NEW, epic.getId());
+        subtask.setStartTime(LocalDateTime.of(2025, 11, 3, 10, 0));
+        subtask.setDuration(Duration.ofMinutes(60));
+        manager.createSubtask(subtask);
 
         Task task = new Task("Task", "D", Status.NEW);
         task.setStartTime(LocalDateTime.of(2025, 11, 3, 10, 30));
@@ -130,19 +130,19 @@ public abstract class TaskManagerTest<T extends TaskManager> {
 
     @Test
     void shouldReturnPrioritizedTasksSortedByStartTime() {
-        Task t1 = new Task("T1", "D", Status.NEW);
-        t1.setStartTime(LocalDateTime.of(2025, 11, 3, 11, 0));
-        t1.setDuration(Duration.ofMinutes(30));
+        Task task1 = new Task("T1", "D", Status.NEW);
+        task1.setStartTime(LocalDateTime.of(2025, 11, 3, 11, 0));
+        task1.setDuration(Duration.ofMinutes(30));
 
         Epic epic = new Epic("Epic", "Desc", Status.NEW);
         manager.createEpic(epic);
 
-        Subtask s1 = new Subtask("S1", "D", Status.NEW, epic.getId());
-        s1.setStartTime(LocalDateTime.of(2025, 11, 3, 10, 0));
-        s1.setDuration(Duration.ofMinutes(30));
+        Subtask subtask1 = new Subtask("S1", "D", Status.NEW, epic.getId());
+        subtask1.setStartTime(LocalDateTime.of(2025, 11, 3, 10, 0));
+        subtask1.setDuration(Duration.ofMinutes(30));
 
-        Task savedT1 = manager.createTask(t1);
-        Subtask savedS1 = manager.createSubtask(s1);
+        Task savedT1 = manager.createTask(task1);
+        Subtask savedS1 = manager.createSubtask(subtask1);
 
         List<Task> list = manager.getPrioritizedTasks();
         assertEquals(2, list.size());
@@ -152,17 +152,16 @@ public abstract class TaskManagerTest<T extends TaskManager> {
 
     @Test
     void shouldExcludeTasksWithoutStartTimeFromPrioritizedList() {
-        Task t1 = new Task("T1", "D", Status.NEW);
-        t1.setStartTime(LocalDateTime.of(2025, 11, 3, 10, 0));
+        Task task1 = new Task("T1", "D", Status.NEW);
+        task1.setStartTime(LocalDateTime.of(2025, 11, 3, 10, 0));
 
-        Task t2 = new Task("T2", "D", Status.NEW);
-        // startTime = null
+        Task task2 = new Task("T2", "D", Status.NEW);
 
-        manager.createTask(t1);
-        manager.createTask(t2);
+        manager.createTask(task1);
+        manager.createTask(task2);
 
         List<Task> list = manager.getPrioritizedTasks();
         assertEquals(1, list.size());
-        assertEquals("T1", list.get(0).getTitle());
+        assertEquals("T1", list.getFirst().getTitle());
     }
 }
